--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "imagekit": "^6.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
